# oscar_quant

./: .gitignore  README.md  pyproject.toml
scripts/: install_oscar_dependency.sh
src/granite_oscar_quant/: __init__.py  benchmark.py  cli.py  config.py  granite_patch.py  loader.py  models.py  schemas.py
src/oscar_quant/: __init__.py  artifact.py  benchmark.py  cli.py  config.py  gemma4_patch.py  granite_patch.py  kv_cache_utils.py  loader.py  models.py  schemas.py
tests/: test_config.py
