[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-quant"
version = "0.1.0"
description = "OScaR KV-cache and safetensors weight quantization tools for Granite and Gemma4"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "accelerate>=0.33",
  "huggingface-hub>=0.24",
  "pydantic>=2.8",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "torch>=2.6",
  "transformers>=5.5",
]

[project.optional-dependencies]
artifact = [
  "torchao>=0.15",
]

[project.scripts]
oscar-baseline = "oscar_quant.benchmark:main"
oscar-generate = "oscar_quant.cli:main"
oscar-quantize-weights = "oscar_quant.artifact:main"
model-quantize-weights = "oscar_quant.artifact:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
